# ml_ops_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  data.dvc  deploy-frontend.sh  dvc.yaml  model.dvc  pyproject.toml  report.html  tasks.py
.dvc/: config
.github/workflows/: build_api.yaml  data-change.yaml  docker-build.yaml  docs-pages.yaml  linting.yaml  model-registry.yaml  pre-commit.yaml  tests.yaml
configs/: config.yaml  model_conf.yaml  train_config.yaml  training_conf.yaml  vertex_config.yaml  vertex_train.yaml
configs/data/: augmented.yaml  base.yaml
configs/model/detector/: yolov8n.yaml  yolov8s.yaml
configs/model/ocr/: crnn_default.yaml  crnn_full.yaml
configs/wandb_configs/: default.yaml  disabled.yaml
dockerfiles/: api.dockerfile  eval.dockerfile  frontend.dockerfile  train.dockerfile
docs/: PROFILING.md  README.md  mkdocs.yaml
docs/source/: architecture.md  data.md  evaluation.md  index.md  operations.md  quickstart.md  serving.md  training.md
reports/: README.md  make_architecture_diagram.py  report.html
src/ml_ops/: api.py  data.py  eval_easyocr.py  evaluate.py  frontend.py  logging_config.py  make_small_dataset.py  model.py  model_loader.py  profile.py  train.py  visualize.py
tests/: conftest.py  test_api.py  test_data.py  test_data_utils.py  test_evaluate_utils.py  test_model.py  test_model_utils.py  test_profile_utils.py  test_train.py  test_train_utils.py
tests/integrationtests/: __init__.py  test_api_integration.py
tests/performancetests/: README.md  __init__.py  locustfile.py
(+4 files in other folders)
