[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ml_ops"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group 60", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "fastapi==0.128.0",
    "gcloud>=0.18.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch==2.6.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "ultralytics>=8.0.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "pillow>=10.0.0",
    "albumentations>=1.3.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "loguru>=0.7.3",
    "tqdm>=4.65.0",
    "wandb>=0.23.1",
    "easyocr>=1.7.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = ["tests/*", "**/__init__.py"]
